--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,9 @@
   --background-footer-link-color: rgba(255, 255, 255, 0.1);
   --backdrop-background-color: rgba(0, 0, 0, 0.2);
   --background-color-services: rgba(47, 48, 58, 0.8);
+
+  --header-border-color: #ECECEC;
+
   --time-animation: 250ms;
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -27,12 +30,12 @@ html {
 }
 
 body {
-  background-color: var(--primary-white-color);
   color: var(--primary-text-color);
-
   font-size: 14px;
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
+
+  background-color: var(--primary-white-color);
 }
 
 /* утилити */
@@ -40,6 +43,7 @@ body {
 .list {
   padding: 0;
   margin: 0;
+
   list-style: none;
 }
 
@@ -75,7 +79,7 @@ img {
 /* page-header */
 
 .page-header {
-  border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid var(--header-border-color);
 }
 
 /* logo */
@@ -83,7 +87,6 @@ img {
 .logo {
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
-
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -117,19 +120,18 @@ img {
 }
 
 .site-nav .link {
-  transition: color var(--time-animation) var(--timing-function);
-
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 
   color: var(--title-text-color);
-
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+
+  transition: color var(--time-animation) var(--timing-function);
 }
 
 .site-nav .link:hover,
@@ -153,6 +155,7 @@ img {
   display: block;
   width: 100%;
   height: 4px;
+
   background-color: var(--accent-color);
   border-radius: 2px;
 }
@@ -169,17 +172,17 @@ img {
 }
 
 .adress-nav .link {
-  transition: color var(--time-animation) var(--timing-function);
-
   display: flex;
   align-items: center;
-  color: var(--primary-text-color);
-  text-decoration: none;
 
+  color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.4;
   letter-spacing: 0.02em;
+  text-decoration: none;
+
+  transition: color var(--time-animation) var(--timing-function);
 }
 
 .adress-nav .link:hover,
@@ -206,6 +209,7 @@ img {
   height: 600px;
   margin-left: auto;
   margin-right: auto;
+
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -222,7 +226,6 @@ img {
   width: 696px;
 
   color: var(--primary-white-color);
-
   font-weight: 900;
   font-size: 44px;
   line-height: 1.39;
@@ -234,25 +237,25 @@ img {
 /* Кнопка героя */
 
 .button-hero.primary {
-  transition: box-shadow var(--time-animation) var(--timing-function);
-
   display: flex;
   align-items: center;
-  text-align: center;
   padding: 10px 32px;
   margin-left: auto;
   margin-right: auto;
 
   color: var(--primary-white-color);
-  background-color: var(--accent-color);
-  border: 2px solid transparent;
-  border-radius: 4px;
-
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
+  text-align: center;
+
+  background-color: var(--accent-color);
+  border: 2px solid transparent;
+  border-radius: 4px;
+
+  transition: box-shadow var(--time-animation) var(--timing-function);
 }
 
 .button-hero:hover,
@@ -266,8 +269,10 @@ img {
   position: fixed;
   top: 0;
   left: 0;
+
   width: 100%;
   height: 100%;
+
   background-color: var(--backdrop-background-color);
   
   opacity: 1;
@@ -298,7 +303,6 @@ img {
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
 
   transform:translate(-50%, -50%) scale(1);
-
   transition: transform var(--time-animation) var(--timing-function);
 }
 
@@ -308,8 +312,6 @@ img {
   position: absolute;
   top: 0;
   right: 0;
-  transform: translate(-8px, 8px);
-  transition: background-color var(--time-animation) var(--timing-function);
 
   display: flex;
   justify-content: center;
@@ -317,10 +319,14 @@ img {
   width: 30px;
   height: 30px;
 
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
   color: var(--primary-white-color);
+
   background-color: var(--primary-white-color);
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  transform: translate(-8px, 8px);
+  transition: background-color var(--time-animation) var(--timing-function);
 }
 
 .modal-close:hover,
@@ -340,7 +346,6 @@ img {
   margin-bottom: 50px;
 
   color: var(--title-text-color);
-
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -353,7 +358,6 @@ img {
   margin-bottom: 50px;
 
   color: var(--title-text-color);
-
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -391,7 +395,6 @@ img {
   margin-bottom: 10px;
 
   color: var(--title-text-color);
-
   font-weight: 700;
   font-size: 14px;
   line-height: 1.4;
@@ -430,11 +433,11 @@ img {
 .services-thumb {
   position: absolute;
   bottom: 0;
+  left: 0;
 
   display: flex;
   justify-content: center;
   align-items: center;
-  
   width: 100%;
   height: 70px;
 
@@ -443,7 +446,6 @@ img {
 
 .services-description {
   color: var(--primary-white-color);
-  
   font-weight: 700;
   font-size: 14px;
   line-height: 1.4;
@@ -468,7 +470,6 @@ img {
 
   background-color: var(--primary-white-color);
   border-radius: 0px 0px 4px 4px;
-
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
   0px 1px 1px rgba(0, 0, 0, 0.14),
   0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -482,7 +483,6 @@ img {
   margin-bottom: 0;
 
   color: var(--title-text-color);
-
   font-weight: 500;
   font-size: 16px;
   line-height: 1.9;
@@ -517,18 +517,20 @@ img {
 }
 
 .workers-link {
-  transition: background-color var(--time-animation) var(--timing-function),
-  color var(--time-animation) var(--timing-function);
-
   display: flex;
   justify-content: center;
   align-items: center;
   width: 44px;
   height: 44px;
 
-  border-radius: 50%;
   color: var(--background-color-icon);
+
+  border-radius: 50%;
   background-color: var(--primary-white-color);
+  border-radius: 50%;
+
+  transition: background-color var(--time-animation) var(--timing-function),
+  color var(--time-animation) var(--timing-function);
 }
 
 .workers-icon {
@@ -536,8 +538,9 @@ img {
 }
 
 .workers-link:hover {
-  background-color: var(--accent-color);
   color: var(--primary-white-color);
+  
+  background-color: var(--accent-color);
 }
 
 /* customers */
@@ -556,25 +559,22 @@ img {
 }
 
 .customers-logo {
-  transition: background-color var(--time-animation) var(--timing-function),
-  color var(--time-animation) var(--timing-function),
-  border var(--time-animation) var(--timing-function);
-
   display: flex;
   justify-content: center;
   align-items: center;
-
   width: 170px;
   height: 92px;
-
   padding: 16px 32px;
 
-  border: 1px solid #afb1b8;
-  box-sizing: border-box;
+  color: var(--background-color-icon);
+
+  background-color: var(--primary-white-color);
+  border: 1px solid var(--background-color-icon);
   border-radius: 4px;
 
-  color: var(--background-color-icon);
-  background-color: var(--primary-white-color);
+  transition: background-color var(--time-animation) var(--timing-function),
+  color var(--time-animation) var(--timing-function),
+  border var(--time-animation) var(--timing-function);
 }
 
 .customers-icon {
@@ -582,8 +582,9 @@ img {
 }
 
 .customers-logo:hover {
-  background-color: var(--primary-white-color);
   color: var(--accent-color);
+
+  background-color: var(--primary-white-color);
   border: 1px solid var(--accent-color);
 }
 
@@ -591,7 +592,6 @@ img {
 
 .footer {
   display: flex;
-
   padding-top: 60px;
   padding-bottom: 60px;
 
@@ -613,7 +613,6 @@ img {
   margin-bottom: 0;
 
   color: var(--primary-white-color);
-
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -621,15 +620,14 @@ img {
 }
 
 .adress-footer .link {
-  transition: color var(--time-animation) var(--timing-function);
-
   color: var(--adress-footer);
-
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
   text-decoration: none;
+
+  transition: color var(--time-animation) var(--timing-function);
 }
 
 .adress-footer {
@@ -659,7 +657,6 @@ img {
   margin-bottom: 0;
 
   color: var(--primary-white-color);
-
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
@@ -681,17 +678,18 @@ img {
 }
 
 .footer-link {
-  transition: background-color var(--time-animation) var(--timing-function);
-
   display: flex;
   align-items: center;
   justify-content: center;
   width: 44px;
   height: 44px;
 
-  border-radius: 50%;
   color: var(--primary-white-color);
+
   background-color: var(--background-footer-link-color);
+  border-radius: 50%;
+
+  transition: background-color var(--time-animation) var(--timing-function);
 }
 
 .footer-link:last-child {
@@ -758,18 +756,17 @@ img {
 .examples .examples-title {
   margin-bottom: 4px;
 
-  background-color: var(--primary-white-color);
   color: var(--title-text-color);
-
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+
+  background-color: var(--primary-white-color);
 }
 
 .examples-text {
   color: var(--primary-text-color);
-
   font-weight: 400;
   font-size: 16px;
   line-height: 1.9;
@@ -777,11 +774,11 @@ img {
 }
 
 .examples-cards {
-  transition: box-shadow var(--time-animation) var(--timing-function);
-
   display: inline-block;
 
   text-decoration: none;
+
+  transition: box-shadow var(--time-animation) var(--timing-function);
 }
 
 .examples-cards.primary:hover {
@@ -812,6 +809,7 @@ img {
 
 .examples-thumb {
   position: relative;
+  
   overflow: hidden;
 }
 
@@ -819,8 +817,10 @@ img {
   position: absolute;
   top: 0;
   left: 0;
+
   width: 100%;
   height: 100%;
+
   background-color: var(--accent-color-examples-cards);
 
   transform: translateY(100%);
@@ -838,8 +838,8 @@ img {
   position: absolute;
 
   margin: 63px 24px;
-  color: var(--primary-white-color);
 
+  color: var(--primary-white-color);
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
@@ -849,30 +849,30 @@ img {
 /* Кнопки фильтра */
 
 .button-filter {
-  transition: background-color var(--time-animation) var(--timing-function),
-  color var(--time-animation) var(--timing-function),
-  box-shadow var(--time-animation) var(--timing-function);
-
   padding: 6px 22px;
 
-  border: 2px solid transparent;
-  border-radius: 4px;
-
   color: var(--title-text-color);
-  background-color: var(--section-background-color);
-
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
   text-align: center;
   letter-spacing: 0.03em;
+
+  background-color: var(--section-background-color);
+  border: 2px solid transparent;
+  border-radius: 4px;
+
+  transition: background-color var(--time-animation) var(--timing-function),
+  color var(--time-animation) var(--timing-function),
+  box-shadow var(--time-animation) var(--timing-function);
 }
 
 .button-filter.primary:hover,
 .button-filter.primary:focus {
-  background-color: var(--accent-color);
   color: var(--primary-white-color);
+
+  background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
